<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group1">
        <item android:id="@+id/action_add"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/action_add"/>
        <item android:id="@+id/action_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/action_search"/>
        <item android:id="@+id/action_test"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/action_test" />
    </group>
    <group android:id="@+id/group2">
        <item android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>
</menu>